--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp && node index.js"
+    "start": "gulp && node index.js",
+    "build": "gulp && node build.js"
   },
   "author": "Jacob Pettersson",
   "license": "ISC",
