--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,13 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [ {
+      "source" : "**/*.@(jpg|jpeg|gif|png)",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "max-age=30672000"
+      } ]
+      } ],
     "cleanUrls": true
   }
 }
