--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp": "^3.9.1",
     "gulp-cache-bust": "^1.3.0",
     "gulp-cachebust": "0.0.9",
-    "gulp-clean": "^0.4.0"
+    "gulp-clean": "^0.4.0",
+    "gulp-cssmin": "^0.2.0"
   },
   "babel": {
     "presets": [
