--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "Jacob Pettersson",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
+    "express": "^4.16.4",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-less": "^4.0.0",
     "gulp-minify": "^2.1.0",
     "handlebars": "^4.0.11",
     "handlebars-helper-import": "^2.4.0",
-    "hbs": "^4.0.1"
+    "hbs": "^4.0.1",
+    "natives": "^1.1.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
